@startuml
hide methods
left to right direction

class Plataforma {
  -String designacao
}

class AreaAtividade {
  -String codigo
  -String descBreve
  -String descDetalhada
 
}

class CompetenciaTecnica {
  -String codigo
  -String descBreve
  -String descDetalhada
}

class CategoriaTarefa {
  -String identInterno
  -String descriçao
}

class Tarefa {
  -String custo
  -String duração
  -String designação
  -String descTécnica
  -String descInformativa
  -String refÚnica
}

Plataforma "1" -- "*" AreaAtividade : possui >
Plataforma "1" -- "*" CompetenciaTecnica : possui >
CompetenciaTecnica "*" -- "1" CategoriaTarefa: requer <
CompetenciaTecnica "*" -- "1" AreaAtividade : referente a >
AreaAtividade "1" -- "1" CategoriaTarefa : possui >
CategoriaTarefa "1" -- "*" Tarefa : possui >
@enduml